--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,18 @@
 <html>
 <head>
 	<title>Baku Global Beton</title>
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
+	<div>
+		addaadaadaadad
+		dadaddadada
+	</div>
+	<div>
+		adadadadadad
+		aadadadadadaa
+	</div>
 
 </body>
+<script type="text/javascript" src="./js/script.js"></script>
 </html>
