seperated the parts that we have to work without merge

--- a/src/index.html
+++ b/src/index.html
@@ -308,6 +308,51 @@
             </div>
        
     </section>
+<!-- SERVICE SECTION STARTS HERE
+*****************************************************
+*****************************************************
+********************************************************************
+********************************************************************
+**************************************************************************
+**************************************************************
+********************************************************* -->
+
+<!-- 
+JEYHUN WORKS HERE -->
+
+
+<!-- SERVICE SECTION END HERE *****************************************************
+*****************************************************
+********************************************************************
+********************************************************************
+**************************************************************************
+**************************************************************
+********************************************************* -->
+
+<!-- 
+PARALLAX SECTION GOES HERE
+*****************************************************
+*****************************************************
+********************************************************************
+********************************************************************
+**************************************************************************
+**************************************************************
+********************************************************* -->
+
+
+<!-- RASUL WORKS HERE
+ -->
+
+
+<!-- 
+PARALLAX SECTION ENDS HERE
+*****************************************************
+*****************************************************
+********************************************************************
+********************************************************************
+**************************************************************************
+**************************************************************
+********************************************************* -->
 
 
 
