--- a/src/index.html
+++ b/src/index.html
@@ -342,7 +342,17 @@ PARALLAX SECTION GOES HERE
 
 <!-- RASUL WORKS HERE
  -->
-
+<section id="parallax">
+    <div class="container-fluid mainCont">
+        <div class="parallaxDiv">
+            <div class="col-4 offset-1 parallaxDivText">
+            <h2>Sizin istəyinizə uyğun hər növdə yüksək keyfiiyəti beton bizdə</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eius quod vero officia! Consequatur libero accusamus repellendus error maxime alias.</p>
+            <a href="#">Learn More</a>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- 
 PARALLAX SECTION ENDS HERE
