some changes on navbar

--- a/src/index.html
+++ b/src/index.html
@@ -73,32 +73,32 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav pad-top navButtons">
                     <li class="nav-item active">
-                        <a class="nav-link " href="#">Ana səhifə
+                        <a class="nav-link btn btn-warning btnMine" href="#">Ana səhifə
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Şirkət haqqında</a>
+                        <a class="nav-link btn btn-warning btnMine" href="#">Şirkət haqqında</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Servis və xidmətlər</a>
+                        <a class="nav-link btn btn-warning btnMine" href="#">Servis və xidmətlər</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Layihələr</a>
+                        <a class="nav-link btn btn-warning btnMine" href="#">Layihələr</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">İnvestorlar</a>
+                        <a class="nav-link btn btn-warning btnMine" href="#">İnvestorlar</a>
                     </li>
                     <li class="nav-item dropdown productitm">
-                        <a class="nav-link dropdown-toggle  " href="#" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle btn btn-warning btnMine" href="#" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">
                             Məhsullarımız
                         </a>
                         <div class="dropdown-menu productDiv" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Numune</a>
-                            <a class="dropdown-item" href="#">Numune</a>
-                            <a class="dropdown-item" href="#">Numune</a>
+                            <a class="dropdown-item text-center btnMine" href="#">Numune</a>
+                            <a class="dropdown-item text-center btnMine" href="#">Numune</a>
+                            <a class="dropdown-item text-center btnMine" href="#">Numune</a>
                             <li class="nav-item">
-                                <a class="nav-link " href="#">Əlaqə</a>
+                                <a class="nav-link btn btn-warning btnMine" href="#">Əlaqə</a>
                             </li>
                         </div>
                     </li>
